--- a/src/components/Products/Products.css
+++ b/src/components/Products/Products.css
@@ -9,3 +9,13 @@
 .product{
     border: 1px solid rebeccapurple;
 }
+@media screen and (max-width:576px) {
+    .product img{
+        width:100px;
+        height: 100px;
+        padding: 2px;
+        margin: 3px;
+        border: 2px solid skyblue;
+        border-radius: 2px;
+       }
+}
