--- a/src/components/Shop/Shop..css
+++ b/src/components/Shop/Shop..css
@@ -16,3 +16,8 @@
 .cart-container{
     border: 2px solid darkblue;
 }
+@media screen and (max-width:576px) {
+    .product-container{
+        grid-template-columns: repeat(1, 1fr);
+    } 
+}
