--- a/src/components/Shop/Shop..css
+++ b/src/components/Shop/Shop..css
@@ -14,6 +14,7 @@
     border: 2px solid darkblue;
 }
 .cart-container{
+    background-color: bisque;
     border: 2px solid darkblue;
 }
 @media screen and (max-width:576px) {
